# py-monads

./: .gitignore  README.md  pyproject.toml
src/monads/: __init__.py  _types.py  all.py  exceptions.py  option.py  result.py  tools.py  types.py
tests/: test_catch.py  test_option.py  test_result.py  test_tools.py
tests/typing/: option.py  result.py
