[project]
dynamic = ["version"]
name = "monads"
description = "Python-flavored `Option` and `Result` types."
authors = [
    {name = "Eneg", email = "42005170+Enegg@users.noreply.github.com"},
]
dependencies = [
    "attrs >= 24.2.0",
]
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/monads"]

[tool.pdm.version]
source = "file"
path = "src/monads/__init__.py"


[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
preview = true
explicit-preview-rules = true

select = [
    "ALL",

    # preview
    "RUF022", # sort __all__
]
ignore = [
    "ARG",       # unused parameters
    "COM812",    # don't require commas
    "C9",        # complexity
    "D1",        # missing docstrings
    "FIX", "TD", # todos
    "N818",      # naming exceptions as *Error
    "SLF001",    # private member access; handled by pyright
    "PYI041",    # redundant int | float unions
    "INP001",
    "PLC0105",   # T_co/T_contra, don't care
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = [
    "__attrs_pre_init__ ",
    "__attrs_post_init__",
    "__attrs_init__",
]


[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"

# disabled even in strict
deprecateTypingAliases = true
reportImplicitOverride = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

# prefer "# pyright: ignore[ruleName]" over "# type: ignore"
enableTypeIgnoreComments = false

# downgrade a few common non-issues
reportUnusedImport = "warning"
reportMatchNotExhaustive = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryIsInstance = "information"

reportImportCycles = false
